<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_references"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:alpha="1"
    tools:context="com.example.sit302_team.melbourne_history.References"
    android:layout_width="wrap_content">

    <!-- wrap all widget to scroll view -->
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- About Melbourne History App -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- paragraph 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:alpha="0.8">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references01"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference01"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references02"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference02"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references03"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference03"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references04"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference04"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references05"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference05"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references06"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference07"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references08"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference08"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references09"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference09"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references10"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference11"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references12"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference12"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references13"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference13"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references14"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference14"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references15"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference14"
                    android:textSize="12sp"
                    android:padding="5dp"/>

                    <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/references16"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/grey"
                    android:text="@string/reference14"
                    android:textSize="12sp"
                    android:padding="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


