<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@mipmap/melbourne_from_above"
    android:alpha="0.8"
    tools:context="com.example.sit302_team.melbourne_history.AboutUs">

    <!-- wrap all widget to scroll view -->
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- About Melbourne History App -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- paragraph 1 -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp"
                    android:background="@color/white"
                    android:alpha="0.8">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutUsPart01"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:text="@string/AboutUsParagraph01Title"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutUsPar1"
                    android:textColor="@color/green"
                    android:text="@string/AboutUsParagraph01Text"
                    android:textSize="15sp"
                    android:padding="10dp"/>
            </LinearLayout>

            <!-- paragraph 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:alpha="0.8">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutUsPart02"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:text="@string/AboutUsParagraph02Title"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutUsPar2_1"
                    android:textColor="@color/green"
                    android:text="@string/AboutUsParagraph02Text_01"
                    android:textSize="15sp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutUsPar2_2"
                    android:textColor="@color/green"
                    android:text="@string/AboutUsParagraph02Text_02"
                    android:textSize="15sp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutUsPar2_3"
                    android:textColor="@color/green"
                    android:text="@string/AboutUsParagraph02Text_03"
                    android:textSize="15sp"
                    android:padding="10dp"/>
            </LinearLayout>

            <!-- paragraph 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:alpha="0.8">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutUsPart03"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/green"
                    android:text="@string/AboutUsParagraph03Title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutUsPar3_1"
                    android:textColor="@color/green"
                    android:text="@string/AboutUsParagraph03Text_01"
                    android:textSize="15sp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutUsPar3_2"
                    android:textColor="@color/green"
                    android:text="@string/AboutUsParagraph03Text_02"
                    android:textSize="15sp"
                    android:padding="10dp"/>
            </LinearLayout>

            <!-- Break Line -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newline"/>

            <ImageButton
                android:id="@+id/referenceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@mipmap/app_icon" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
