<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/locationRowContainer">



    <!-- location picture -->
    <ImageView
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:id="@+id/location_pic"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/icon"
        android:src="@mipmap/app_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <!-- location name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location_name"
            android:text="@string/location_name"
            android:textColor="@color/green"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"
            android:textStyle="normal|bold" />

        <!-- location description -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location_description"
            android:text="@string/location_description"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:textStyle="normal|bold" />

    </LinearLayout>

</LinearLayout>


